// Copyright 2022 lichangao(李长傲) <changao.li.work@outlook.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/changaolee/skeleton.

syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/changaolee/skeleton/pkg/proto/skeleton/v1";

// Skeleton 定义了一个 Skeleton RPC 服务
service Skeleton {
  rpc ListUser(ListUserRequest) returns (ListUserResponse) {}
}

message UserInfo {
  string username = 1;
  string nickname = 2;
  string email = 3;
  string phone = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}

// ListUserRequest 指定了 `ListUser` 接口的请求参数
message ListUserRequest {
  int64 limit = 1;
  int64 offset = 2;
}

// ListUserResponse 指定了 `GET /v1/users` 接口的返回参数，相当于 HTTP Response
message ListUserResponse {
  int64 totalCount = 1;
  repeated UserInfo Users = 2;
}